Bugfix - fix vertical centering on Firefox
Vertical centering was using 'transform: translate' and Firefox didn't
like it so implemented differently to work across all browsers.

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -279,12 +279,12 @@ a {
 
 // ------------------------------------------------------ premium thanks center
 
-.premium-thanks-center {
-    display: flex;
-    min-height: calc(100vh - #{$topnav-spacer-height});
-    z-index: -100;
-    transform: translate(0, -10%);
-}
+// .premium-thanks-center {
+//     display: flex;
+//     min-height: calc(100vh - #{$topnav-spacer-height});
+//     z-index: -100;
+//     // transform: translateY(-10%);
+// }
 
 // ------------------------------------------------------------- main links app
 
@@ -980,6 +980,14 @@ a {
         padding: 4rem 1rem 2rem;
         border: 2px solid $onyx;
         border-radius: 3px;
+    }
+}
+
+// -------------------------------------------------------------------- premium
+
+#premium {
+    .set-height {
+        min-height: calc(80vh - #{$topnav-spacer-height});
     }
 }
 
